--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sessions</a>
+                        <a class="nav-link" href="{% url 'meetings' %}">Sessions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'about' %}">About</a>
