--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -9,4 +9,5 @@
 <p>Welcome to Tether!</p>
 
 <button><a href="{% url 'signup' %}">Sign Up</a></button>
+<button><a href="{% url 'login' %}">Login</a></button>
 {% endblock content %}
