--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 
 
-{% block title %}Calendar{% endblock title %}
+{% block title %}Login{% endblock title %}
 
 
 {% block content %}
-    {{ calendar }}
+<h1>Welcome</h1>
+
 {% endblock content %}
