--- a/templates/meetings/calendar.html
+++ b/templates/meetings/calendar.html
@@ -5,5 +5,8 @@
 
 
 {% block content %}
-
+    <form method="GET">
+        {{ form }}
+        <input type="submit" value = 'Submit'>
+    </form>
 {% endblock content %}
